Added the kirkstone compatibility,

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-jimmy = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-jimmy = "6"
 
 LAYERDEPENDS_meta-jimmy = "core"
-LAYERSERIES_COMPAT_meta-jimmy = "dunfell"
+LAYERSERIES_COMPAT_meta-jimmy = "dunfell kirkstone"
